GPU Subdivision displays the normal overlay of the generated mesh vertices and loops #98735

Closed
opened 2022-06-09 16:42:44 +02:00 by Germano Cavalcante · 6 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14802 Core Profile Context 22.2.3 30.0.14029.5006

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-26 21:17, hash: b82de02e7c

Short description of error
For vertex and split normals only, the overlay that displays the normal behaves differently in GPU and non-GPU Subdivision.
GIF.gif
If we compare other modifiers, technically the GPU subdvision is correct. But the result has to be consistent between subdivision types and face normal overlay.

Exact steps for others to reproduce the error

  • On the default cable add the subdivision modifier
  • In the Viewport Overlays go to Normal and enable Display Vertex ou Display Split Normals
  • Compare the result enabling and disabling GPU subdivision
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14802 Core Profile Context 22.2.3 30.0.14029.5006 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-26 21:17, hash: `b82de02e7c` **Short description of error** For vertex and split normals only, the overlay that displays the normal behaves differently in GPU and non-GPU Subdivision. ![GIF.gif](https://archive.blender.org/developer/F13141760/GIF.gif) If we compare other modifiers, technically the GPU subdvision is correct. But the result has to be consistent between subdivision types and face normal overlay. **Exact steps for others to reproduce the error** - On the default cable add the subdivision modifier - In the `Viewport Overlays` go to `Normal` and enable Display Vertex ou Display Split Normals - Compare the result enabling and disabling GPU subdivision
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Rincewind3D-1

Added subscriber: @Rincewind3D-1

This issue was referenced by 8369d24d30

This issue was referenced by 8369d24d3094decb2b83dd14025e5794116d51c6

This issue was referenced by 16f5d51109

This issue was referenced by 16f5d51109bce849dff5379c60360f271622ac0f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-06-13 06:22:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98735
No description provided.